--- a/index.html
+++ b/index.html
@@ -1,128 +1,163 @@
-<?php
-$company_name = "Marck Business";
-$services = [
-    "Consultoría Empresarial",
-    "Estrategia de Marketing",
-    "Planificación Financiera",
-    "Actualizaciones de Software",
-    "Desarrollo de Sistemas",
-    "Asesoría en Procesos de Producción y Atención",
-    "Desarrollo de Páginas Web"
-];
-?>
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title><?= htmlspecialchars($company_name); ?></title>
+<title>Marck Business - Soluciones Empresariales Profesionales</title>
 <style>
+/* Variables de color */
 :root {
-    --azul-marino: #003366;
-    --naranja: #ff6600;
-    --blanco: #ffffff;
-    --gris: #333333;
-    --gris-claro: #f7f7f7;
-    --negro: #000000;
-    --gradiente: linear-gradient(135deg, #003366, #ff6600);
+    --primary-color: #003366;   /* Azul marino */
+    --secondary-color: #ff6600; /* Naranja */
+    --background: #f5f5f5;
+    --text-color: #333;
+    --white: #fff;
+    --gradient: linear-gradient(135deg, #003366, #ff6600);
 }
 
 /* Reset y tipografía */
-body, h1, h2, h3, p, ul, li {
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body {
     font-family: 'Arial', sans-serif;
-    background-color: var(--gris-claro);
-    color: var(--gris);
+    background-color: var(--background);
+    color: var(--text-color);
     line-height: 1.6;
     scroll-behavior: smooth;
 }
 
 /* Header */
 header {
-    background-color: var(--negro);
-    color: var(--blanco);
-    text-align: center;
-    padding: 1rem 1rem;
+    background-color: var(--white);
     position: sticky;
     top: 0;
     z-index: 1000;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+header nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 1rem;
 }
 header img {
-    max-width: 200px;
+    max-width: 180px;
     height: auto;
-    display: block;
-    margin: 0 auto 0.5rem auto;
+    cursor: pointer;
+    transition: transform 0.3s ease;
 }
-nav ul {
+header img:hover {
+    transform: scale(1.05);
+}
+header ul {
     list-style: none;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     gap: 1rem;
-    overflow-x: auto;
-    padding: 0;
-    margin: 0;
 }
-nav ul li a {
+header ul li a {
     text-decoration: none;
-    color: var(--blanco);
-    font-weight: bold;
+    color: var(--primary-color);
+    font-weight: 600;
     padding: 0.5rem 1rem;
-    border: 2px solid var(--blanco);
     border-radius: 5px;
-    transition: 0.3s;
+    transition: all 0.3s ease;
 }
-nav ul li a:hover {
-    background-color: var(--naranja);
-    color: var(--azul-marino);
+header ul li a:hover {
+    background: var(--primary-color);
+    color: var(--white);
 }
 
-/* Secciones */
-.section {
-    padding: 3rem 1rem;
+/* Hero Section */
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
     text-align: center;
-    margin: 1rem auto;
-    border-radius: 10px;
-    max-width: 90%;
-    opacity: 0;
-    transform: translateY(50px);
-    transition: all 0.6s ease;
+    background: var(--gradient);
+    color: var(--white);
+    padding: 0 1rem;
 }
-.section.active {
-    opacity: 1;
-    transform: translateY(0);
-}
-.section:nth-child(even) {
-    background-color: var(--gris-claro);
-}
-.section:nth-child(odd) {
-    background-color: var(--blanco);
-}
-.section h2 {
-    color: var(--azul-marino);
+.hero h1 {
+    font-size: 3rem;
     margin-bottom: 1rem;
-    font-size: 2rem;
+    animation: fadeInDown 1s ease forwards;
 }
-.section ul {
-    list-style: none;
-    padding: 0;
+.hero p {
+    font-size: 1.2rem;
     max-width: 600px;
+    margin-bottom: 2rem;
+    animation: fadeInUp 1s ease forwards;
+}
+.hero button {
+    padding: 0.75rem 2rem;
+    font-size: 1rem;
+    background-color: var(--white);
+    color: var(--primary-color);
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: all 0.3s ease;
+    animation: fadeInUp 1.2s ease forwards;
+}
+.hero button:hover {
+    background-color: #e0e0e0;
+}
+
+/* Sections */
+section {
+    padding: 5rem 1rem;
+    max-width: 1200px;
     margin: 0 auto;
 }
-.section ul li {
-    background-color: var(--naranja);
-    color: var(--blanco);
-    margin: 0.5rem 0;
-    padding: 0.75rem 1rem;
-    border-radius: 5px;
-    word-wrap: break-word;
+section h2 {
+    font-size: 2.2rem;
+    text-align: center;
+    margin-bottom: 2rem;
+    color: var(--primary-color);
+    position: relative;
+}
+section h2::after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: var(--secondary-color);
+    margin: 0.5rem auto 0 auto;
+    border-radius: 2px;
 }
 
-/* Video Section */
+/* Services */
+.services-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+}
+.services-grid .card {
+    background-color: var(--white);
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+}
+.services-grid .card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+}
+.services-grid .card h3 {
+    margin-bottom: 1rem;
+    color: var(--primary-color);
+}
+
+/* Videos */
 .video-section {
     display: flex;
     flex-direction: column;
@@ -133,40 +168,60 @@ nav ul li a:hover {
     width: 90%;
     max-width: 600px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease;
+}
+.video-section video:hover {
+    transform: scale(1.02);
 }
 
-/* Comments Section */
+/* Comments */
 .comments-section textarea {
     width: 90%;
     max-width: 600px;
     height: 100px;
     padding: 1rem;
+    border-radius: 10px;
+    border: 2px solid #ccc;
     margin-bottom: 1rem;
-    border: 2px solid var(--gris);
-    border-radius: 5px;
     resize: none;
 }
 .comments-section button {
-    padding: 0.5rem 1.5rem;
-    background-color: var(--naranja);
-    color: var(--blanco);
+    padding: 0.75rem 1.5rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 25px;
+    background: var(--secondary-color);
+    color: var(--white);
+    font-weight: bold;
     cursor: pointer;
-    transition: 0.3s;
+    transition: all 0.3s ease;
 }
 .comments-section button:hover {
-    background-color: var(--azul-marino);
+    background: var(--primary-color);
+}
+
+/* Contact */
+.contact p {
+    text-align: center;
+    font-size: 1.2rem;
 }
 
 /* Footer */
 footer {
-    background: var(--gradiente);
-    color: var(--blanco);
+    background: var(--primary-color);
+    color: var(--white);
     text-align: center;
-    padding: 1rem;
-    margin-top: 1rem;
+    padding: 2rem 1rem;
+}
+
+/* Animations */
+@keyframes fadeInDown {
+    0% { opacity: 0; transform: translateY(-20px); }
+    100% { opacity: 1; transform: translateY(0); }
+}
+@keyframes fadeInUp {
+    0% { opacity: 0; transform: translateY(20px); }
+    100% { opacity: 1; transform: translateY(0); }
 }
 
 /* WhatsApp Button */
@@ -184,25 +239,22 @@ footer {
 }
 
 /* Responsivo */
-@media (max-width: 600px) {
-    nav ul {
-        flex-direction: column;
-    }
-    header img {
-        max-width: 150px;
-    }
+@media (max-width: 768px) {
+    .hero h1 { font-size: 2.2rem; }
+    .hero p { font-size: 1rem; }
+    .services-grid { gap: 1rem; }
 }
 </style>
 </head>
 <body>
 
+<!-- Header -->
 <header>
-    <img src="images/Diseño%20sin%20titulo.png" alt="Logo de <?= htmlspecialchars($company_name); ?>">
     <nav>
+        <img src="images/Diseño%20sin%20titulo.png" alt="Logo Marck Business">
         <ul>
             <li><a href="#about">Sobre Nosotros</a></li>
             <li><a href="#services">Servicios</a></li>
-            <li><a href="#new-services">Nuestros Nuevos Servicios</a></li>
             <li><a href="#videos">Videos</a></li>
             <li><a href="#comments">Comentarios</a></li>
             <li><a href="#contact">Contacto</a></li>
@@ -210,77 +262,81 @@ footer {
     </nav>
 </header>
 
-<section id="about" class="section">
+<!-- Hero -->
+<section class="hero">
+    <h1>Impulsamos tu negocio hacia el éxito</h1>
+    <p>En Marck Business ofrecemos soluciones empresariales integrales, combinando innovación, estrategia y eficiencia para potenciar tu crecimiento.</p>
+    <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">Contáctanos</button>
+</section>
+
+<!-- About -->
+<section id="about">
     <h2>Sobre Nosotros</h2>
-    <p>En <?= htmlspecialchars($company_name); ?> ofrecemos soluciones estratégicas para el crecimiento empresarial.</p>
+    <p style="max-width:700px;margin:0 auto;text-align:center;">
+        Marck Business es tu socio estratégico para alcanzar resultados tangibles. Nos especializamos en optimizar procesos, mejorar la rentabilidad y transformar tu visión en acciones concretas.
+    </p>
 </section>
 
-<section id="services" class="section">
-    <h2>Servicios</h2>
-    <ul>
-        <?php foreach($services as $service): ?>
-        <li><?= htmlspecialchars($service); ?></li>
-        <?php endforeach; ?>
-    </ul>
+<!-- Services -->
+<section id="services">
+    <h2>Nuestros Servicios</h2>
+    <div class="services-grid">
+        <div class="card"><h3>Consultoría Empresarial</h3><p>Asesoría especializada para fortalecer la gestión y toma de decisiones.</p></div>
+        <div class="card"><h3>Estrategia de Marketing</h3><p>Planificación y ejecución de estrategias que aumentan visibilidad y ventas.</p></div>
+        <div class="card"><h3>Planificación Financiera</h3><p>Optimización de recursos y proyecciones para maximizar beneficios.</p></div>
+        <div class="card"><h3>Actualizaciones de Software</h3><p>Mantenemos tus sistemas al día con soluciones tecnológicas modernas.</p></div>
+        <div class="card"><h3>Desarrollo de Sistemas</h3><p>Soluciones a medida para automatizar procesos y mejorar eficiencia.</p></div>
+        <div class="card"><h3>Desarrollo Web</h3><p>Páginas profesionales y tiendas en línea con diseño atractivo y funcional.</p></div>
+    </div>
 </section>
 
-<section id="new-services" class="section">
-    <h2>Servicios Adicionales</h2>
-    <ul>
-        <li>Consultoría en Transformación Digital</li>
-        <li>Optimización de Procesos Empresariales</li>
-        <li>Implementación de ERP y CRM</li>
-        <li>Marketing Digital Avanzado</li>
-        <li>Desarrollo de Soluciones a Medida</li>
-    </ul>
-</section>
-
-<section id="videos" class="section video-section">
+<!-- Videos -->
+<section id="videos" class="video-section">
     <h2>Videos</h2>
     <video src="images/video1.mp4" controls></video>
     <video src="images/video2.mp4" controls></video>
 </section>
 
-<section id="comments" class="section comments-section">
+<!-- Comments -->
+<section id="comments" class="comments-section">
     <h2>Comentarios</h2>
     <textarea placeholder="Escribe tu comentario..."></textarea><br>
     <button>Enviar</button>
 </section>
 
-<section id="contact" class="section">
+<!-- Contact -->
+<section id="contact" class="contact">
     <h2>Contacto</h2>
-    <p>Para más información, contáctanos al <strong>+502 58140621</strong>.</p>
+    <p>Para más información, contáctanos al <strong>+502 58140621</strong> o haz clic en el botón de WhatsApp.</p>
 </section>
 
+<!-- Footer -->
 <footer>
-    <p>© <?= date("Y"); ?> <?= htmlspecialchars($company_name); ?>. Todos los derechos reservados.</p>
+    <p>© 2025 Marck Business. Todos los derechos reservados.</p>
 </footer>
 
+<!-- WhatsApp -->
 <div class="whatsapp-btn" onclick="window.open('https://wa.me/50258140621', '_blank')"></div>
 
 <script>
 // Animaciones de scroll
-const sections = document.querySelectorAll('.section');
-const observer = new IntersectionObserver((entries) => {
+const sections = document.querySelectorAll('section');
+const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
         if(entry.isIntersecting){
             entry.target.classList.add('active');
         }
     });
-}, {threshold: 0.3});
-sections.forEach((section, index) => {
-    section.style.transitionDelay = `${index * 0.2}s`;
-    observer.observe(section);
-});
+}, { threshold: 0.3 });
+sections.forEach(section => observer.observe(section));
 
 // Comentarios funcionales
 const commentBtn = document.querySelector('.comments-section button');
 const commentBox = document.querySelector('.comments-section textarea');
-
 commentBtn.addEventListener('click', () => {
     const comment = commentBox.value.trim();
     if(comment){
-        alert(`Gracias por tu comentario: ${comment}`);
+        alert(`Gracias por tu comentario: "${comment}"`);
         commentBox.value = '';
     } else {
         alert('Por favor escribe un comentario.');
@@ -290,4 +346,3 @@ commentBtn.addEventListener('click', () => {
 
 </body>
 </html>
-
