--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Marck Business - Soluciones Empresariales Profesionales</title>
 <style>
-/* Variables de color */
 :root {
-    --primary-color: #003366;   /* Azul marino */
-    --secondary-color: #ff6600; /* Naranja */
-    --background: #f5f5f5;
-    --text-color: #333;
+    --primary: #003366;
+    --secondary: #ff6600;
+    --light-bg: #f5f5f5;
+    --dark-bg: #0b0b0b;
     --white: #fff;
     --gradient: linear-gradient(135deg, #003366, #ff6600);
 }
@@ -23,303 +22,296 @@
 }
 body {
     font-family: 'Arial', sans-serif;
-    background-color: var(--background);
-    color: var(--text-color);
+    background-color: var(--light-bg);
+    color: var(--primary);
     line-height: 1.6;
     scroll-behavior: smooth;
 }
 
 /* Header */
 header {
-    background-color: var(--white);
     position: sticky;
     top: 0;
+    background: var(--white);
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     z-index: 1000;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
 }
 header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: auto;
     padding: 1rem;
 }
 header img {
     max-width: 180px;
-    height: auto;
     cursor: pointer;
     transition: transform 0.3s ease;
 }
-header img:hover {
-    transform: scale(1.05);
-}
+header img:hover { transform: scale(1.05); }
 header ul {
-    list-style: none;
     display: flex;
+    list-style: none;
     gap: 1rem;
 }
 header ul li a {
     text-decoration: none;
-    color: var(--primary-color);
-    font-weight: 600;
+    color: var(--primary);
+    font-weight: bold;
     padding: 0.5rem 1rem;
     border-radius: 5px;
-    transition: all 0.3s ease;
+    transition: 0.3s;
 }
 header ul li a:hover {
-    background: var(--primary-color);
+    background: var(--primary);
     color: var(--white);
 }
 
-/* Hero Section */
+/* Hero */
 .hero {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 90vh;
     text-align: center;
-    background: var(--gradient);
+    background: url('images/hero-bg.jpg') center/cover no-repeat;
     color: var(--white);
     padding: 0 1rem;
+}
+.hero::after {
+    content:"";
+    position:absolute;
+    top:0;left:0;right:0;bottom:0;
+    background: rgba(0,0,0,0.5);
 }
 .hero h1 {
     font-size: 3rem;
     margin-bottom: 1rem;
+    position: relative;
+    z-index: 1;
     animation: fadeInDown 1s ease forwards;
 }
 .hero p {
-    font-size: 1.2rem;
-    max-width: 600px;
-    margin-bottom: 2rem;
+    max-width: 700px;
+    margin: 0 auto 2rem auto;
+    position: relative;
+    z-index: 1;
     animation: fadeInUp 1s ease forwards;
 }
 .hero button {
-    padding: 0.75rem 2rem;
+    padding: 1rem 2.5rem;
     font-size: 1rem;
-    background-color: var(--white);
-    color: var(--primary-color);
+    background: var(--secondary);
+    color: var(--white);
     border: none;
-    border-radius: 25px;
-    cursor: pointer;
+    border-radius: 50px;
     font-weight: bold;
-    transition: all 0.3s ease;
-    animation: fadeInUp 1.2s ease forwards;
+    cursor: pointer;
+    transition: 0.3s;
+    position: relative;
+    z-index: 1;
 }
-.hero button:hover {
-    background-color: #e0e0e0;
-}
+.hero button:hover { background: var(--white); color: var(--secondary); }
 
 /* Sections */
 section {
     padding: 5rem 1rem;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: auto;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 0.6s ease;
+}
+section.active {
+    opacity: 1;
+    transform: translateY(0);
 }
 section h2 {
     font-size: 2.2rem;
     text-align: center;
     margin-bottom: 2rem;
-    color: var(--primary-color);
+    color: var(--primary);
     position: relative;
 }
 section h2::after {
-    content: "";
-    display: block;
-    width: 60px;
-    height: 3px;
-    background: var(--secondary-color);
-    margin: 0.5rem auto 0 auto;
-    border-radius: 2px;
+    content:"";
+    display:block;
+    width:60px;
+    height:3px;
+    background: var(--secondary);
+    margin:0.5rem auto 0 auto;
+    border-radius:2px;
 }
 
-/* Services */
+/* Services Grid */
 .services-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2rem;
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
+    gap:2rem;
 }
 .services-grid .card {
-    background-color: var(--white);
+    background: var(--white);
     padding: 2rem;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    border-radius: 15px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    cursor: pointer;
+    cursor:pointer;
 }
 .services-grid .card:hover {
     transform: translateY(-10px);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    box-shadow: 0 12px 30px rgba(0,0,0,0.2);
 }
 .services-grid .card h3 {
     margin-bottom: 1rem;
-    color: var(--primary-color);
 }
 
 /* Videos */
 .video-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    gap:2rem;
 }
 .video-section video {
-    width: 90%;
-    max-width: 600px;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    width:90%;
+    max-width:600px;
+    border-radius: 15px;
+    box-shadow:0 6px 20px rgba(0,0,0,0.1);
     transition: transform 0.3s ease;
 }
-.video-section video:hover {
-    transform: scale(1.02);
-}
+.video-section video:hover { transform: scale(1.03); }
 
 /* Comments */
 .comments-section textarea {
-    width: 90%;
-    max-width: 600px;
-    height: 100px;
-    padding: 1rem;
-    border-radius: 10px;
-    border: 2px solid #ccc;
-    margin-bottom: 1rem;
-    resize: none;
+    width:90%;
+    max-width:600px;
+    height:120px;
+    padding:1rem;
+    border-radius:15px;
+    border:2px solid #ccc;
+    margin-bottom:1rem;
+    resize:none;
 }
 .comments-section button {
-    padding: 0.75rem 1.5rem;
-    border: none;
-    border-radius: 25px;
-    background: var(--secondary-color);
+    padding:0.75rem 2rem;
+    border:none;
+    border-radius:50px;
+    background: var(--secondary);
     color: var(--white);
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.3s ease;
+    font-weight:bold;
+    cursor:pointer;
+    transition: 0.3s;
 }
-.comments-section button:hover {
-    background: var(--primary-color);
-}
+.comments-section button:hover { background: var(--primary); }
 
 /* Contact */
 .contact p {
-    text-align: center;
-    font-size: 1.2rem;
+    text-align:center;
+    font-size:1.2rem;
 }
 
 /* Footer */
 footer {
-    background: var(--primary-color);
+    background: var(--primary);
     color: var(--white);
-    text-align: center;
-    padding: 2rem 1rem;
+    text-align:center;
+    padding:2rem 1rem;
 }
 
-/* Animations */
-@keyframes fadeInDown {
-    0% { opacity: 0; transform: translateY(-20px); }
-    100% { opacity: 1; transform: translateY(0); }
-}
-@keyframes fadeInUp {
-    0% { opacity: 0; transform: translateY(20px); }
-    100% { opacity: 1; transform: translateY(0); }
-}
+/* Animaciones */
+@keyframes fadeInDown {0%{opacity:0;transform:translateY(-20px);}100%{opacity:1;transform:translateY(0);}}
+@keyframes fadeInUp {0%{opacity:0;transform:translateY(20px);}100%{opacity:1;transform:translateY(0);}}
 
-/* WhatsApp Button */
+/* WhatsApp */
 .whatsapp-btn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 60px;
-    height: 60px;
-    background-image: url('images/whats.png');
-    background-size: cover;
-    border-radius: 50%;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    cursor: pointer;
+    position:fixed;
+    bottom:20px;
+    right:20px;
+    width:60px;
+    height:60px;
+    background-image:url('images/whats.png');
+    background-size:cover;
+    border-radius:50%;
+    box-shadow:0 4px 15px rgba(0,0,0,0.2);
+    cursor:pointer;
 }
 
 /* Responsivo */
-@media (max-width: 768px) {
-    .hero h1 { font-size: 2.2rem; }
-    .hero p { font-size: 1rem; }
-    .services-grid { gap: 1rem; }
+@media(max-width:768px){
+    .hero h1{font-size:2.2rem;}
+    .hero p{font-size:1rem;}
+    .services-grid{gap:1rem;}
 }
 </style>
 </head>
 <body>
 
-<!-- Header -->
 <header>
-    <nav>
-        <img src="images/Diseño%20sin%20titulo.png" alt="Logo Marck Business">
-        <ul>
-            <li><a href="#about">Sobre Nosotros</a></li>
-            <li><a href="#services">Servicios</a></li>
-            <li><a href="#videos">Videos</a></li>
-            <li><a href="#comments">Comentarios</a></li>
-            <li><a href="#contact">Contacto</a></li>
-        </ul>
-    </nav>
+<nav>
+    <img src="images/Diseño%20sin%20titulo.png" alt="Logo Marck Business">
+    <ul>
+        <li><a href="#about">Sobre Nosotros</a></li>
+        <li><a href="#services">Servicios</a></li>
+        <li><a href="#videos">Videos</a></li>
+        <li><a href="#comments">Comentarios</a></li>
+        <li><a href="#contact">Contacto</a></li>
+    </ul>
+</nav>
 </header>
 
-<!-- Hero -->
 <section class="hero">
-    <h1>Impulsamos tu negocio hacia el éxito</h1>
-    <p>En Marck Business ofrecemos soluciones empresariales integrales, combinando innovación, estrategia y eficiencia para potenciar tu crecimiento.</p>
+    <h1>Transformamos tu negocio con innovación y estrategia</h1>
+    <p>Marck Business ofrece soluciones integrales para optimizar procesos, aumentar eficiencia y garantizar resultados medibles.</p>
     <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">Contáctanos</button>
 </section>
 
-<!-- About -->
 <section id="about">
     <h2>Sobre Nosotros</h2>
     <p style="max-width:700px;margin:0 auto;text-align:center;">
-        Marck Business es tu socio estratégico para alcanzar resultados tangibles. Nos especializamos en optimizar procesos, mejorar la rentabilidad y transformar tu visión en acciones concretas.
+        En Marck Business, combinamos experiencia y creatividad para impulsar tu negocio. Somos aliados estratégicos enfocados en la excelencia y la eficiencia.
     </p>
 </section>
 
-<!-- Services -->
 <section id="services">
     <h2>Nuestros Servicios</h2>
     <div class="services-grid">
-        <div class="card"><h3>Consultoría Empresarial</h3><p>Asesoría especializada para fortalecer la gestión y toma de decisiones.</p></div>
-        <div class="card"><h3>Estrategia de Marketing</h3><p>Planificación y ejecución de estrategias que aumentan visibilidad y ventas.</p></div>
-        <div class="card"><h3>Planificación Financiera</h3><p>Optimización de recursos y proyecciones para maximizar beneficios.</p></div>
-        <div class="card"><h3>Actualizaciones de Software</h3><p>Mantenemos tus sistemas al día con soluciones tecnológicas modernas.</p></div>
-        <div class="card"><h3>Desarrollo de Sistemas</h3><p>Soluciones a medida para automatizar procesos y mejorar eficiencia.</p></div>
-        <div class="card"><h3>Desarrollo Web</h3><p>Páginas profesionales y tiendas en línea con diseño atractivo y funcional.</p></div>
+        <div class="card"><h3>Consultoría Empresarial</h3><p>Asesoría para mejorar la toma de decisiones y eficiencia organizacional.</p></div>
+        <div class="card"><h3>Estrategia de Marketing</h3><p>Planificación y ejecución para potenciar tu marca y aumentar ventas.</p></div>
+        <div class="card"><h3>Planificación Financiera</h3><p>Optimización de recursos y proyecciones para maximizar rentabilidad.</p></div>
+        <div class="card"><h3>Actualizaciones de Software</h3><p>Mantenemos tus sistemas al día con tecnología moderna y segura.</p></div>
+        <div class="card"><h3>Desarrollo de Sistemas</h3><p>Soluciones a medida para automatizar y mejorar procesos internos.</p></div>
+        <div class="card"><h3>Desarrollo Web</h3><p>Páginas profesionales y tiendas online con diseño atractivo y funcional.</p></div>
     </div>
 </section>
 
-<!-- Videos -->
 <section id="videos" class="video-section">
     <h2>Videos</h2>
     <video src="images/video1.mp4" controls></video>
     <video src="images/video2.mp4" controls></video>
 </section>
 
-<!-- Comments -->
 <section id="comments" class="comments-section">
     <h2>Comentarios</h2>
     <textarea placeholder="Escribe tu comentario..."></textarea><br>
     <button>Enviar</button>
 </section>
 
-<!-- Contact -->
 <section id="contact" class="contact">
     <h2>Contacto</h2>
-    <p>Para más información, contáctanos al <strong>+502 58140621</strong> o haz clic en el botón de WhatsApp.</p>
+    <p>Contáctanos al <strong>+502 58140621</strong> o haz clic en el botón de WhatsApp para comunicarte directamente con nosotros.</p>
 </section>
 
-<!-- Footer -->
 <footer>
     <p>© 2025 Marck Business. Todos los derechos reservados.</p>
 </footer>
 
-<!-- WhatsApp -->
 <div class="whatsapp-btn" onclick="window.open('https://wa.me/50258140621', '_blank')"></div>
 
 <script>
-// Animaciones de scroll
+// Animación scroll
 const sections = document.querySelectorAll('section');
 const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
@@ -327,10 +319,10 @@ const observer = new IntersectionObserver(entries => {
             entry.target.classList.add('active');
         }
     });
-}, { threshold: 0.3 });
+},{threshold:0.3});
 sections.forEach(section => observer.observe(section));
 
-// Comentarios funcionales
+// Comentarios
 const commentBtn = document.querySelector('.comments-section button');
 const commentBox = document.querySelector('.comments-section textarea');
 commentBtn.addEventListener('click', () => {
@@ -338,9 +330,7 @@ commentBtn.addEventListener('click', () => {
     if(comment){
         alert(`Gracias por tu comentario: "${comment}"`);
         commentBox.value = '';
-    } else {
-        alert('Por favor escribe un comentario.');
-    }
+    } else alert('Por favor escribe un comentario.');
 });
 </script>
 
