--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 :root {
     --primary: #003366;
     --secondary: #ff6600;
-    --light-bg: #f5f5f5;
-    --dark-bg: #0b0b0b;
     --white: #fff;
-    --gradient: linear-gradient(135deg, #003366, #ff6600);
 }
 
 /* Reset y tipografía */
@@ -22,17 +19,28 @@
 }
 body {
     font-family: 'Arial', sans-serif;
-    background-color: var(--light-bg);
-    color: var(--primary);
     line-height: 1.6;
     scroll-behavior: smooth;
+    /* Fondo global con tu imagen */
+    background: url('images/fondo de sitio.jpg') center/cover no-repeat fixed;
+    position: relative;
+    color: var(--primary);
+}
+
+/* Overlay global */
+body::before {
+    content:"";
+    position:fixed;
+    top:0; left:0; right:0; bottom:0;
+    background: rgba(0,0,0,0.5); /* para que el contenido resalte */
+    z-index: -1;
 }
 
 /* Header */
 header {
     position: sticky;
     top: 0;
-    background: var(--white);
+    background: rgba(255,255,255,0.9);
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     z-index: 1000;
 }
@@ -77,28 +85,17 @@ header ul li a:hover {
     align-items: center;
     height: 90vh;
     text-align: center;
-    background: url('images/hero-bg.jpg') center/cover no-repeat;
     color: var(--white);
     padding: 0 1rem;
-}
-.hero::after {
-    content:"";
-    position:absolute;
-    top:0;left:0;right:0;bottom:0;
-    background: rgba(0,0,0,0.5);
 }
 .hero h1 {
     font-size: 3rem;
     margin-bottom: 1rem;
-    position: relative;
-    z-index: 1;
     animation: fadeInDown 1s ease forwards;
 }
 .hero p {
     max-width: 700px;
     margin: 0 auto 2rem auto;
-    position: relative;
-    z-index: 1;
     animation: fadeInUp 1s ease forwards;
 }
 .hero button {
@@ -111,8 +108,6 @@ header ul li a:hover {
     font-weight: bold;
     cursor: pointer;
     transition: 0.3s;
-    position: relative;
-    z-index: 1;
 }
 .hero button:hover { background: var(--white); color: var(--secondary); }
 
@@ -121,6 +116,9 @@ section {
     padding: 5rem 1rem;
     max-width: 1200px;
     margin: auto;
+    background: rgba(255,255,255,0.95); /* Fondo semi-blanco para resaltar texto */
+    border-radius: 15px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
     opacity: 0;
     transform: translateY(50px);
     transition: all 0.6s ease;
