--- a/index.html
+++ b/index.html
@@ -85,18 +85,30 @@ header ul li a:hover {
     align-items: center;
     height: 90vh;
     text-align: center;
-    color: var(--white);
+    color: #f0f0f0;
     padding: 0 1rem;
+}
+.hero::after {
+    content:"";
+    position:absolute;
+    top:0;left:0;right:0;bottom:0;
+    background: rgba(0,0,0,0.4); /* Overlay oscuro para resaltar texto */
 }
 .hero h1 {
     font-size: 3rem;
     margin-bottom: 1rem;
-    animation: fadeInDown 1s ease forwards;
+    font-weight: 700;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+    position: relative;
+    z-index: 1;
 }
 .hero p {
     max-width: 700px;
     margin: 0 auto 2rem auto;
-    animation: fadeInUp 1s ease forwards;
+    font-size: 1.2rem;
+    text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
+    position: relative;
+    z-index: 1;
 }
 .hero button {
     padding: 1rem 2.5rem;
@@ -108,6 +120,8 @@ header ul li a:hover {
     font-weight: bold;
     cursor: pointer;
     transition: 0.3s;
+    position: relative;
+    z-index: 1;
 }
 .hero button:hover { background: var(--white); color: var(--secondary); }
 
@@ -115,8 +129,8 @@ header ul li a:hover {
 section {
     padding: 5rem 1rem;
     max-width: 1200px;
-    margin: auto;
-    background: rgba(255,255,255,0.95); /* Fondo semi-blanco para resaltar texto */
+    margin: 3rem auto;
+    background: rgba(255,255,255,0.95); /* Fondo semi-blanco */
     border-radius: 15px;
     box-shadow: 0 6px 20px rgba(0,0,0,0.1);
     opacity: 0;
@@ -269,7 +283,7 @@ footer {
 <section id="about">
     <h2>Sobre Nosotros</h2>
     <p style="max-width:700px;margin:0 auto;text-align:center;">
-        En Marck Business, combinamos experiencia y creatividad para impulsar tu negocio. Somos aliados estratégicos enfocados en la excelencia y la eficiencia.
+        En Marck Business combinamos experiencia y creatividad para impulsar tu negocio. Somos aliados estratégicos enfocados en la excelencia y la eficiencia.
     </p>
 </section>
 
