--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
     scroll-behavior: smooth;
-    background: url('images/fondo de sitio.jpg') center/cover no-repeat fixed;
+    background: url('images/fondo de sitio.png') center/cover no-repeat fixed;
     position: relative;
     color: var(--primary);
 }
 
-/* Overlay global */
+/* Overlay global para legibilidad */
 body::before {
     content:"";
     position:fixed;
@@ -39,7 +39,7 @@ body::before {
 header {
     position: sticky;
     top: 0;
-    background: #000; /* ahora negro */
+    background: #000;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     z-index: 1000;
 }
@@ -199,7 +199,6 @@ section h2::after {
     align-items:center;
     gap:2rem;
     padding:5rem 1rem;
-    background: url('images/fondo de sitio.png') center/cover no-repeat;
     border-radius: 15px;
     overflow: hidden;
 }
@@ -379,3 +378,4 @@ commentBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
