--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ footer {
                 <li>Reportes de ventas diarias</li>
                 <li>SIN CONTRATO</li>
             </ul>
-            <button>Adquirir PLUS</button>
+            <button onclick="window.open('https://wa.me/50241529411','_blank')">Adquirir PLUS</button>
         </div>
         <div class="pricing-card premium">
             <h3>PREMIUM</h3>
@@ -427,7 +427,7 @@ footer {
                 <li>4 visitas al mes sin costo</li>
                 <li>Facturación electrónica ILIMITADA</li>
             </ul>
-            <button>Adquirir PREMIUM</button>
+            <button onclick="window.open('https://wa.me/50241529411','_blank')">Adquirir PREMIUM</button>
         </div>
     </div>
 </section>
@@ -446,14 +446,14 @@ footer {
 
 <section id="contact" class="contact">
     <h2>Contacto</h2>
-    <p>Contáctanos al <strong>+502 58140621</strong> o haz clic en el botón de WhatsApp para comunicarte directamente con nosotros.</p>
+    <p>Contáctanos al <strong>+502 41529411</strong> o haz clic en el botón de WhatsApp para comunicarte directamente con nosotros.</p>
 </section>
 
 <footer>
     <p>© 2025 Marck Business. Todos los derechos reservados.</p>
 </footer>
 
-<div class="whatsapp-btn" onclick="window.open('https://wa.me/50258140621', '_blank')"></div>
+<div class="whatsapp-btn" onclick="window.open('https://wa.me/50241529411', '_blank')"></div>
 
 <script>
 // Animaciones al scroll
@@ -481,4 +481,3 @@ commentBtn.addEventListener('click', () => {
 
 </body>
 </html>
-
